# unipi-lci

./: .gitignore  README.md
eac/Automatas/: DFAs.tex
eac/Intermediate Representations/: exercises.tex  structure.tex
ocaml/: fix-point.ml
ocaml/Solutions/: 1.ml  2.ml
ocaml/Solutions/exercises-1/: 3.ml  4.ml  5.ml  6.ml
ocaml/Solutions/exercises-2/: 1.ml  2.ml  3.ml  4.ml
ocaml/Solutions/exercises-3/: heap.ml  heap.mli
ocaml/Solutions/exercises-4/: finite_automata.ml  function_pairs.ml  general_tree.ml  map_fsa.ml  pack_consecutive.ml  polish_arithmetic.ml  prefix_sum.ml  simple_arithmetic.ml  tail_rec_bst.ml
ocaml/Statements/: exercises-4.md
ocaml/effect_handlers/: a.out  inversion_of_control.ml  inversion_of_control.mli  round_robin_scheduling.ml
paper/: presentation.tex  speech.txt
project/: README.md  report.tex
project/PF2/miniFun/: README.md
project/PF2/miniFun/lib/: dune  miniFun.ml
project/PF2/miniFun/test/: test.ml
project/PF3/MiniTyFun/: .ocamlformat
project/PF3/MiniTyFun/lib/: MiniTyFun.ml  MiniTyFun.mli  MiniTyFunInferred.ml  dune
project/PF3/MiniTyFun/test/: MiniTyFun.ml
project/PF4/miniimp_interpreter/: README.md
project/PF4/miniimp_interpreter/lib/: miniimp_ast.mli  miniimp_interpreter.mli  miniimp_lexer.mll  miniimp_parser.mly
project/PF4/miniimp_interpreter/programs/: error.miniimp  fibonacci.miniimp
project/PF4/miniimpinterpreter/: Miniimplexer.mll  README.md  dune  dune-project
project/PF4/miniimpinterpreter/lib/: MiniImp.mli  Miniimparser.mly  Miniimplexer.mll  dune  miniimpinterpreter.ml  miniimpinterpreter.mli
project/PF4/miniimpinterpreter/programs/: sum.miniimp
project/PF4/miniimpinterpreter/test/: dune
project/PF4/minityfun_interpreter/: dune-project  minityfun_interpreter.opam
project/PF4/minityfun_interpreter/lib/: dune  minityfun_ast.ml  minityfun_ast.mli  minityfun_interpreter.ml  minityfun_interpreter.mli  minityfun_lexer.mll  minityfun_parser.mly
project/PF4/minityfun_interpreter/programs/: factorial.minityfun
project/PF4/minityfun_interpreter/test/: dune
project/PF5/: README.md
project/PF5/cfg/: cfg.dot  dune  dune-project
project/PF5/cfg/dot/: example1-minirisc.dot  (+6 more)
project/PF5/cfg/lib/: cfg.ml  cfg.mli  data_flow_analysis.ml  data_flow_analysis.mli  data_flow_utils.ml  data_flow_utils.mli  defined_analysis.ml  defined_analysis.mli  dune  liveness_analysis.ml  liveness_analysis.mli  miniimp.ml  miniimp.mli  miniimp_ast.ml  miniimp_ast.mli  miniimp_parser.mly  minirisc.ml  minirisc.mli  target_code.ml  target_code.mli
project/doc/: report.aux  report.fdb_latexmk  report.fls  report.out  report.pyg  report.tex  report.toc
project/src/: dune  dune-project
project/src/dot/: example_bimp.dot  example_boolean.dot  factorial-miniimp.dot  factorial-minirisc.dot  factorial-notspilled.dot  fibonacci-liveanalysis.dot  fibonacci-miniimmp.dot  minirisc-fibonacci.dot  power2.dot  spill1.dot  undefined1-defined.dot  undefined1-minirisc.dot
project/src/lib/: cfg.ml  cfg.mli  data_flow_analysis.ml  data_flow_analysis.mli  data_flow_utils.ml  data_flow_utils.mli  defined_analysis.ml  defined_analysis.mli  deque.ml  deque.mli  dune  liveness_analysis.ml  liveness_analysis.mli  minifun.ml  minifun.mli  miniimp.ml  miniimp.mli  miniimp_parser.mly  minirisc.ml  minirisc.mli  minirisc_lexer.mll  minirisc_parser.mly  minityfun.ml  minityfun.mli  minityfun_ast.ml  minityfun_ast.mli  minityfun_parser.mly  target_code.ml  target_code.mli
project/src/miniimp_programs/: absolute_value.miniimp  example4.miniimp  factorial.miniimp  fibonacci.miniimp  if.miniimp  spill1.miniimp
project/src/minityfun_programs/: example1.minityfun  example2.minityfun  example3.minityfun  example4.minityfun  factorial.minityfun  fibonacci.minityfun  higherorder.minityfun  negative_integers.minityfun  negative_integers2.minityfun
project/src/programs/: example1.miniimp  factorial.minityfun  fibonacci.miniimp  power2.miniimp  reusinghole.minityfun  undefined1.miniimp
project/src/test/: data_flow_tests.ml  dune  target_code_tests.ml  tyfun_tests.ml
project_fragments/PF1/: miniFun.ml  miniImp.ml  testminiFun.ml
project_fragments/PF2/miniFun/: dune-project
project_fragments/PF3/MiniTyFun/: README.md  dune-project
project_fragments/PF4/miniimp_interpreter/: dune-project
(+31 files in other folders)
