(ocamllex miniimp_lexer)

(ocamllex minityfun_lexer)

(ocamllex minirisc_lexer)

(menhir
 (modules minirisc_parser)
 (explain true))

(menhir
 (modules miniimp_parser)
 (explain true))

(menhir
 (modules minityfun_parser)
 (explain true))

(library
 (name miniimp)
 (public_name miniimp)
 (modules miniimp miniimp_ast miniimp_lexer miniimp_parser))

(library
 (name data_flow_analysis)
 (public_name data_flow_analysis)
 (modules
  data_flow_analysis
  data_flow_utils
  defined_analysis
  liveness_analysis)
 (libraries cfg minirisc))

(library
 (name cfg)
 (public_name cfg)
 (modules cfg)
 (libraries miniimp minirisc))

(library
 (name target_code)
 (public_name target_code)
 (modules target_code minirisc_lexer minirisc_parser)
 (libraries data_flow_analysis cfg minirisc))

(library
 (name minirisc)
 (public_name minirisc)
 (modules minirisc))

(library
 (package minifun)
 (name minifun)
 (modules minifun))

(library
 (package minityfun)
 (name minityfun)
 (modules minityfun minityfun_ast minityfun_lexer minityfun_parser))