(library
 (name data_flow_analysis)
 (modules data_flow_analysis data_flow_utils defined_analysis liveness_analysis)
 (libraries cfg minirisc))

(library
 (name cfg)
 (public_name cfg)
 (modules cfg)
 (libraries miniimp_ast minirisc))

(library
 (name miniimp_ast)
 (public_name miniimp_ast)
 (modules miniimp_ast))

(library
 (name minirisc)
 (public_name minirisc)
 (modules minirisc))
