; For lexing and parsing
(ocamllex miniimp_lexer)

(menhir
 (modules miniimp_parser)
 (explain true))

; Miniimp's language -> miniimp_ast
; Miniimp's lexer -> miniimp_lexer
; Miniimp's parser -> miniimp_parser
; Miniimp exposed API -> miniimp

(library
 (name miniimp)
 (public_name miniimp)
 (modules miniimp miniimp_ast miniimp_lexer miniimp_parser))

(library
 (name data_flow_analysis)
 (modules data_flow_analysis data_flow_utils defined_analysis liveness_analysis)
 (libraries cfg minirisc))

(library
 (name cfg)
 (public_name cfg)
 (modules cfg)
 (libraries miniimp minirisc))

(library
 (name target_code)
 (modules target_code)
 (libraries data_flow_analysis cfg minirisc))

(library
 (name minirisc)
 (public_name minirisc)
 (modules minirisc))
